Fixed bug causing dialogCropImage's dialog width to collapse.

--- a/src/client/modules/main/dialogs/dialogCropImage/dialogCropImage.scss
+++ b/src/client/modules/main/dialogs/dialogCropImage/dialogCropImage.scss
@@ -1,6 +1,6 @@
-.dialog.dialogcropimage {
+.dialogcropimage {
+	width: 432px;
 	max-width: inherit;
-	width: inherit;
 }
 
 .dialogcropimage {
